2012-07-04  Peter Bloomfield

	* src/main-window.c: manage sensitivity of check mail button in
	unthreaded build.

2012-06-27  Peter Bloomfield

	* src/save-restore.c (config_load_sections), (config_mailbox_init),
	(config_address_book_load), (config_address_books_load),
	(config_identities_load), (load_mru): prepend to GList and
	reverse it, instead of appending; use g_list_free_full().

2012-06-25  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_msgno_filt_out),
	(lbm_msgno_filt_check): find node once, not twice.

2012-06-19  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_node_has_unseen_child),
	(lbm_get_index_entry), (mbox_model_get_value): get index entry
	by message number instead of by GNode.

2012-06-13  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_inserted_idle_cb): lock mutex
	before signalling cond.

2012-06-13  Peter Bloomfield

	* src/balsa-app.c (find_url_idle_cb): lock mutex before
	signalling cond.

2012-06-12  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_message_expunged_cb),
	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed),
	(lbm_msgno_filt_check_idle_cb),
	(libbalsa_mailbox_msgno_filt_check): update message number if a
	message is expunged.

2012-06-11  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check_idle_cb): unref the
	LibBalsaMailboxSearchIter.

2012-06-11  Peter Bloomfield

	* libbalsa/imap-server.c: remove redundant parentheses.

2012-06-11  Peter Bloomfield

	Ref count LibBalsaMailboxSearchIter

	* libbalsa/mailbox.c (libbalsa_mailbox_run_filters_on_reception),
	(libbalsa_mailbox_msgno_filt_check),
	(libbalsa_mailbox_search_iter_new),
	(libbalsa_mailbox_search_iter_ref),
	(libbalsa_mailbox_search_iter_unref),
	(libbalsa_mailbox_messages_change_flags): ref count
	LibBalsaMailboxSearchIter, and unref it instead of free.
	* libbalsa/mailbox.h: new member ref_count.
	* libbalsa/mailbox_local.c (lbm_local_update_view_filter): unref
	LibBalsaMailboxSearchIter instead of free.