@@ -51,7 +51,9 @@ process_mime_part(LibBalsaMessage * message, LibBalsaMessageBody * body,
                   gboolean flow)
 {
     gchar *res = NULL;
+#ifdef HAVE_HTML_WIDGET
     size_t allocated;
+#endif /* HAVE_HTML_WIDGET */
     GString *reply = NULL;
     gchar *mime_type;
     LibBalsaHTMLType html_type;
@@ -78,15 +80,19 @@ process_mime_part(LibBalsaMessage * message, LibBalsaMessageBody * body,
 	if (ignore_html && html_type)
 	    break;
 
+#ifdef HAVE_HTML_WIDGET
 	allocated = libbalsa_message_body_get_content(body, &res, NULL);
 	if (!res)
 	    return NULL;
 
-#ifdef HAVE_HTML_WIDGET
 	if (html_type) {
 	    allocated = libbalsa_html_filter(html_type, &res, allocated);
 	    libbalsa_html_to_string(&res, allocated);
 	}
+#else  /* HAVE_HTML_WIDGET */
+	libbalsa_message_body_get_content(body, &res, NULL);
+	if (!res)
+	    return NULL;
 #endif /* HAVE_HTML_WIDGET */
 
         if (flow && libbalsa_message_body_is_flowed(body)) {
